[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bbo-bbo"
dynamic = ["version"]
description = "Base tools for MPINB BBO group"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    { name = "BBO-lab @ caesar", email = "kay-michael.voit@caesar.de" },
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "numpy",
    "pyyaml",
    "scipy",
]

[project.urls]
Homepage = "https://github.com/bbo-lab/bbo"

[tool.hatch.version]
path = "bbo/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/bbo",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel]
      packages = ["bbo"]

[tool.hatch.metadata]
license-files = ["LICENSE"]
